deprecations and warnings